--- a/titleg.html
+++ b/titleg.html
@@ -5,21 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramrod</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <div class="collapse" id="exCollapsingNavbar">
+      <div class="bg-inverse p-a">
+        <h4>Collapsed content</h4>
+        <span class="text-muted">Toggleable via the navbar brand.</span>
+      </div>
+    </div>
+    <nav class="navbar navbar-light bg-faded">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+        &#9776;
+      </button>
+    </nav>
 </head>
 <body>
     <h1>Team Ramrod</h1>
     <h2>We got a lot of work to do</h2>
     <h3>Proposed Features:</h3>
     <p>
-        <ul>
-            <li>GPS</li>
-            <li>Connects phone to 911</li>
-            <li>Aggreagates closest approprite ERs and urgent cares</li>
-            <li>User roles/admin roles</li>
-            <li>CPR instructions</li>
-            <li>Navigation</li>
-            <li>Health tips/nutrion advice</li>
+        <ul class="list-group">
+          <li class="list-group-item">GPS</li>
+
+          <li class="list-group-item list-group-item-primary">Connects phone to 911</li>
+          <li class="list-group-item list-group-item-secondary">Aggreagates closest approprite ERs and urgent cares</li>
+          <li class="list-group-item list-group-item-success">User roles/admin roles</li>
+          <li class="list-group-item list-group-item-danger">A simple danger list group item</li>
+          <li class="list-group-item list-group-item-warning">CPR instructions</li>
+          <li class="list-group-item list-group-item-info">Navigation</li>
+          <li class="list-group-item list-group-item-light">Health tips/nutrion advice</li>
         </ul>
     </p>
+    
 </body>
 </html>
+
