Added user registration page
created a user registration page and added a navbar that highlights the linked page that the user is currently on

--- a/titleg.html
+++ b/titleg.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ramrod</title>
+    <title>RowdyHealth</title>
+    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="bgrnd.css" />
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+   
+
+
+
     <div class="collapse" id="exCollapsingNavbar">
       <div class="bg-inverse p-a">
         <h4>Collapsed content</h4>
@@ -18,8 +28,10 @@
         &#9776;
       </button>
     </nav>
+
 </head>
-<body>
+<body id="healthpic" class="bg-image">
+
     <h1>Team Ramrod</h1>
     <h2>We got a lot of work to do</h2>
     <h3>Proposed Features:</h3>
@@ -36,6 +48,7 @@
           <li class="list-group-item list-group-item-light">Health tips/nutrion advice</li>
         </ul>
     </p>
+  
     
 </body>
 </html>
