--- a/HomePage.html
+++ b/HomePage.html
@@ -3,9 +3,41 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>RowdyHealth</title>
+
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel='stylesheet'>
+    <link rel="stylesheet" href="Homepage.css">
   </head>
   <body>
+    <header>
+    <h1><span>RowdyHealth</span> </h1>
+    <button  onclick="openNav()"><i id="menu-bars" class="fa fa-bars" aria-hidden="true"> </i></button>
+</header>
+
+<main class="container">
+
+  <div id="mySidenav" class="sideNav">
+  <a href="javascript:void(0)" class="closeBtn" onclick="closeNav()">&times;</a>
+  <a href="#">About</a>
+  <a href="#">Services</a>
+  <a href="#">Login</a>
+  <a href="#">Contact</a>
+  </div>
+
+  <script>
+  function openNav()
+  {
+     document.getElementById("mySidenav").style.width = "250px";
+  }
+  function closeNav()
+  {
+    document.getElementById("mySidenav").style.width = "0";
+  }
+  </script>
+
+</main>
 
   </body>
 </html>
