Animations still not working correctly however text has been updated to be more appropriate

--- a/about_page.html
+++ b/about_page.html
@@ -5,15 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- <meta name="description" content=""> -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Document</title>
+        <title>About US</title>
 
         <link rel="stylesheet" href="App/css/style.css">
-        <script defer src = "App/js/app.js"></script>
+        <script defer src = "App\js\app.js"></script>
+
     </head>
     <body>
     	<section class = "hidden">
 		<h1>RowdyHealth</h1>
-		<p>Our Goal is to  create a robust and rliable website for our users</p>
+		<p>Our Goal is to  create a robust and reliable website for our users</p>
 		</section>
 
 		<section class = "hidden">
@@ -24,7 +25,6 @@
 				David Messa,
 				Alexis Torres
 			</p>
-			
 			<p> 
 				A team consisting of four senior computer science students at 
 				California State University, Bakersfield
@@ -32,12 +32,12 @@
 
 		</section>
 
-		<section class = "hidden">
+		<!-- <section class = "hidden">
 			<h2>Can i just be unbirthed</h2>
 			<p>
 				Poptarts are 10/10 even the basic bitch one, you know the strawberry one
 			</p>
-		</section>
+		</section> -->
 
     </body>
 </html>
