--- a/usrReg.html
+++ b/usrReg.html
@@ -7,12 +7,13 @@
 
     	<div class="topnav">
 	    	<ul class="m1">
-			  <a class="m2 material-symbols-outlined" href="#home">Home</a>
-			  <a class="m2" href="#news">News</a>
-			  <a class="active m2" href="#usrReg">Register</a>
-			  <a class="m2" href="#about">About</a>
+			  <a class="m2 material-symbols-outlined lnks" href="#home">Home</a>
+			  <a class="m2 lnks" href="#news">Login</a>
+			  <a class="active m2 " href="#usrReg">Register</a>
+			  <a class="m2 lnks" href="#about">About</a>
+			  <h2 class="hnav">RowdyHealth</h2>
 			</ul>
-		  <h2 class="hnav">RowdyHealth</h2>
+		  
 
 		  <button class="ham">
 		  	    <i class="menuIcon material-icons">menu</i>
