Fixed to show map and work better with JavaScript

--- a/HomePage.html
+++ b/HomePage.html
@@ -1,43 +1,25 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>RowdyHealth</title>
 
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!--Links that are needed for fonts, icons and for header-->
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel='stylesheet'>
     <link rel="stylesheet" href="Homepage.css">
+    <script type = "text/javascript" src="Hompage.js"></script>
+    
   </head>
   <body>
-    <header>
-    <h1><span>RowdyHealth</span> </h1>
-    <button  onclick="openNav()"><i id="menu-bars" class="fa fa-bars" aria-hidden="true"> </i></button>
-</header>
+       <!--Call for the header icon-->
+<header-component></header-component>
 
-<main class="container">
-
-  <div id="mySidenav" class="sideNav">
-  <a href="javascript:void(0)" class="closeBtn" onclick="closeNav()">&times;</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Login</a>
-  <a href="#">Contact</a>
-  </div>
-
-  <script>
-  function openNav()
-  {
-     document.getElementById("mySidenav").style.width = "250px";
-  }
-  function closeNav()
-  {
-    document.getElementById("mySidenav").style.width = "0";
-  }
-  </script>
-
-</main>
+<div id="map"></div>
+<script async defer
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5exh7JYQlhm_leOXPpi8WkfEjlhwrHe4&callback=initMap">
+</script>
 
   </body>
 </html>
