Placing all js and css in their respective folders (Cleaning up github)

--- a/HomePage.html
+++ b/HomePage.html
@@ -7,8 +7,8 @@
     <!--Links that are needed for fonts, icons and for header-->
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel='stylesheet'>
-    <link rel="stylesheet" href="Homepage.css">
-    <script type = "text/javascript" src="Hompage.js"></script>
+    <link rel="stylesheet" href="App/css/Homepage.css">
+    <script type = "text/javascript" src="App/js/Hompage.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
   </head>
