--- a/about_page.html
+++ b/about_page.html
@@ -8,7 +8,7 @@
         <title>About US</title>
 
         <link rel="stylesheet" href="App/css/style.css">
-        <script defer src = "App\js\app.js"></script>
+        <script defer src = "App/js/app.js"></script>
 
     </head>
     <body>
