--- a/login.html
+++ b/login.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel='stylesheet'>
-    <link rel="stylesheet" href="Homepage.css">
-    <script type = "text/javascript" src="Hompage.js"></script>
+    <link rel="stylesheet" href="App/css/Homepage.css">
+    <script type = "text/javascript" src="App/js/Hompage.js"></script>
     <title>Login</title>
 </head>
 <body id="loginbody">
