--- a/usrReg.html
+++ b/usrReg.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="">
     <head>
-    	<link rel="stylesheet" href="usrReg.css">
+    	<link rel="stylesheet" href="App/css/usrReg.css">
     	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     	<div class="topnav">
@@ -18,7 +18,7 @@
 		  	    <i class="menuIcon material-icons">menu</i>
     			<i class="closeIcon material-icons">close</i>
 		  </button>
-		  <script src="usrReg.js"></script>
+		  <script src="App/js/usrReg.js"></script>
 		</div>
 
     </head>
