--- a/usrReg.html
+++ b/usrReg.html
@@ -1,4 +1,9 @@
 <!doctype html>
+
+<?php
+
+require_once("register.php");
+
 <html class="no-js" lang="">
     <head>
 
@@ -18,7 +23,9 @@
     </head>
     <body>
 
-    
+
+		?>
+
     <div class="container c1">
 
 
@@ -63,7 +70,7 @@
 
   	<div class="col-sm-6">
 	    <p>
-	      <label>Last Name : <input class="rcorners form-control"  type="password" /></label>
+	      <label>Last Name : <input class="rcorners form-control"  type="text" name = "lname" /></label>
 	    </p>
 	 	</div>
 
@@ -106,3 +113,4 @@
 
     </body>
 </html>
+?>
