--- a/usrReg.html
+++ b/usrReg.html
@@ -1,9 +1,6 @@
 <!doctype html>
 
-<?php
 
-require_once("register.php");
-?>
 <html class="no-js" lang="">
     <head>
 
@@ -29,7 +26,7 @@ require_once("register.php");
 
     	<h2> Register an Account </h2>
    
-    <form id="form">
+	<form action= "register.php" method="POST" class = "spaced">
      
     <div class="mb-3 row">
     		<div class="col-sm-6">
