--- a/usrReg.html
+++ b/usrReg.html
@@ -4,10 +4,10 @@
 <html class="no-js" lang="">
     <head>
 
-		  <link rel="stylesheet" href="usrReg.css">
+		  <link rel="stylesheet" href="App/css/usrReg.css">
     	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel='stylesheet'>
- 			<link rel="stylesheet" href="Homepage.css">
+ 			<link rel="stylesheet" href="App/css/Homepage.css">
  			<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     	
 
@@ -20,7 +20,7 @@
 
 		  <script src="usrReg.js"></script>
 
-		  <script type = "text/javascript" src="Hompage.js"></script>
+		  <script type = "text/javascript" src="App/js/Hompage.js"></script>
 
 
 		
