--- a/usrReg.html
+++ b/usrReg.html
@@ -50,7 +50,7 @@
 	     
 				<div class="col-sm-6">
 								<p>
-							    <label>Last name: <input class="rcorners form-control"  type="text" name="password" id="password" /></label>
+							    <label>Last name: <input class="rcorners form-control"  type="text" name="last_name" id="last_name" /></label>
 							   </p>
 				  </div>
 	  </div>
