--- a/usrReg.html
+++ b/usrReg.html
@@ -101,11 +101,11 @@
 
 	<div class="flex-parent-element">
 		
-		<div class="flex-child-element magenta">
+		<!--div class="flex-child-element magenta">
 	    <p>
 	       <label>DOB(xxxx-xx-xx) : <input class="rcorners "  type="text" name="dob" id="dob" /></label>
 	    </p>
-	  </div>
+	  </div -->
 	     
 	  <div class="flex-child-element green">
 			<p>
