Add comments to the article files i created for the article pages also changing the names for the about page files

--- a/HealthArticles.html
+++ b/HealthArticles.html
@@ -17,6 +17,8 @@
             <button type ="submit">Search</button>
         </form>
     </div>
+
+    <!-- ------------------------- Example of how i want to articles to be on the page-------------------------- -->
     <!-- <div class="card-container" style="width: 18rem;"> -->
     <!-- <div class="card-container">
       <div class="one">
