Got health related articles to appear and very basic formatting now i just to make it appear a little nicer and further limit what type of article appear. As it is now all health related articles appear this includes celebrities health and things such as that. Finally recommitting the files for the about-us page. We could potentially use that page to showcase our mission, goals, and team members for our project during the expo

--- a/HealthArticles.html
+++ b/HealthArticles.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <!-- <meta name="description" content=""> -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Article</title>
 
@@ -17,8 +16,12 @@
             <button type ="submit">Search</button>
         </form>
     </div>
-
-    <!-- ------------------------- Example of how i want to articles to be on the page-------------------------- -->
+    <div id = "news articles">
+      <div class = "article">
+        
+      </div>
+    </div>
+    ------------------------- Example of how i want to articles to be on the page-------------------------- -->
     <!-- <div class="card-container" style="width: 18rem;"> -->
     <!-- <div class="card-container">
       <div class="one">
@@ -33,5 +36,17 @@
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div>
-    </div> -->
+    </div>
+</html> -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Health News</title>
+  <link rel="stylesheet" href="App\css\article.css">
+</head>
+<body>
+	<h1>Health News</h1>
+	<div id="articles"></div>
+  <script defer src = "App\js\article.js"></script>
+</body>
 </html>
