Removed unnecessary comments from the the article files. Added a read more button which allows users to go the the link to read the full article. Needs more styling, need to adjust my css card containers to fit for the articles. Expected to resolve this by 2/22/23. Finally need to link the head and hamburger stack that Ramrod uses throughout the website

--- a/HealthArticles.html
+++ b/HealthArticles.html
@@ -1,43 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Article</title>
-
-        <link rel="stylesheet" href="App\css\article.css">
-        <script defer src = "App\js\article.js"></script>
-
-    </head>
-    <div class ="search_bar">
-        <form>
-            <input type="text" placeholder = "Search">
-            <button type ="submit">Search</button>
-        </form>
-    </div>
-    <div id = "news articles">
-      <div class = "article">
-        
-      </div>
-    </div>
-    ------------------------- Example of how i want to articles to be on the page-------------------------- -->
-    <!-- <div class="card-container" style="width: 18rem;"> -->
-    <!-- <div class="card-container">
-      <div class="one">
-        <img src="images/one.png" class = "rounded-image">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="two">
-        <img src="images/two.png" class = "rounded-image">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-    </div>
-</html> -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -46,7 +6,12 @@
 </head>
 <body>
 	<h1>Health News</h1>
-	<div id="articles"></div>
+  <!-- Seach Bar that will be implemented after i do the ast finishing touches for the articles page -->
+  <!-- <form>
+    <input type="text" id="search-input" placeholder="Search...">
+    <button type="submit">Search</button>
+  </form>   -->
+	<div id ="articles"></div>
   <script defer src = "App\js\article.js"></script>
 </body>
 </html>
