about_page now has header

--- a/about_page.html
+++ b/about_page.html
@@ -6,12 +6,16 @@
         <!-- <meta name="description" content=""> -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>About US</title>
-
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel='stylesheet'>
+		<link rel="stylesheet" href="App/css/header.css">
         <link rel="stylesheet" href="App/css/style.css">
         <script defer src = "App/js/app.js"></script>
+		<script type = "text/javascript" src="App/js/Hompage.js"></script>
+		<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     </head>
     <body>
+		<header-component></header-component>
     	<section class = "hidden">
 		<h1>RowdyHealth</h1>
 		<p>Our Goal is to  create a robust and reliable website for our users</p>
