--- a/userprofile.html
+++ b/userprofile.html
@@ -5,15 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="App/css/Homepage.css">
-
+    <link rel="stylesheet" href="App/css/header.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel='stylesheet'>
     <link rel="stylesheet" href="App/css/dropButton.css">
-
+    <script type = "text/javascript" src="App/js/Hompage.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="App/js/dropDown.js"></script>
         
 
     <title>User Profile</title>
 </head>
 <body>
+    <header-component></header-component>
     <div class = "Profile">
         <form class="userform" action="" method="post" enctype="multipart/form-data">
               <!-- This image will be switched once we switch this to php-->
