--- a/HealthArticles.html
+++ b/HealthArticles.html
@@ -3,8 +3,13 @@
 <head>
   <title>Health News</title>
   <link rel="stylesheet" href="App\css\article.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel='stylesheet'>
+  <link rel="stylesheet" href="App/css/header.css">
+  <script type = "text/javascript" src="App/js/Hompage.js"></script>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 </head>
 <body>
+  <header-component></header-component>
 	<h1>Health News</h1>
   <!-- Seach Bar that will be implemented after i do the ast finishing touches for the articles page -->
   <!-- <form>
