minute changes pushing inorder to work on desktop

--- a/HealthArticles.html
+++ b/HealthArticles.html
@@ -16,7 +16,9 @@
     <input type="text" id="search-input" placeholder="Search...">
     <button type="submit">Search</button>
   </form>   -->
-	<div id ="articles"></div>
-  <script defer src = "App\js\article.js"></script>
+  <div class = "cards">
+    <div id ="articles"></div>
+    <script defer src = "App\js\article.js"></script>
+  </div>
 </body>
 </html>
