added styling to the list of medical problems, added a fade animation to the confirmation of the item being added to the database and styled a flexbox for the <ul> tag and a media query that resizes it when the screen reaches a certain width

--- a/jquery_test.html
+++ b/jquery_test.html
@@ -9,6 +9,13 @@
 </head>
 <body>
 	<h1>Medical Problems</h1>
-	<ul id="med-probs"></ul>
+
+	<div class="contain">
+		<div class="contain-bkg">
+		<ul id="med-probs"></ul>
+
+		</div>
+	</div>
+	<div id="med-added"></div>
 </body>
 </html>
