Changed naming conventions
Changed naming conventions for clarity

--- a/display_probs.html
+++ b/display_probs.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Medical Problems</title>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script src="App/js/jquery_test.js"></script>
+	<script src="App/js/display_probs.js"></script>
 	<script src="App/js/clicked.js"></script>
 	<link rel="stylesheet" href="App/css/jquery_test.css">
 </head>
