worked on the style for the userprofile still need too fix it up a bit

--- a/userProfile.html
+++ b/userProfile.html
@@ -20,10 +20,10 @@
 <body>
     <header-component></header-component>
   
-    <div class="profile-header"></div>
+    <div id="profile-header"></div>
 
     <div class = "Profile">
-    
+
     <div class="hist">
         <h2>History</h2>
         <ul id="user-hist"></ul>
