--- a/display_probs.html
+++ b/display_probs.html
@@ -5,7 +5,7 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="App/js/display_probs.js"></script>
 	<script src="App/js/clicked.js"></script>
-	<link rel="stylesheet" href="App/css/jquery_test.css">
+	<link rel="stylesheet" href="App/css/display_probs.css">
 </head>
 <body>
 	<h1>Medical Problems</h1>
