--- a/userProfile.html
+++ b/userProfile.html
@@ -31,7 +31,7 @@
 
     <div class = "alleg">
         <h2>Allergies</h2>
-        <ul id="user-allerg"></ul>
+        <ul id="user-allergies"></ul>
     </div>
 
     <div class="meds">
